# LearnedMetricIndex

./: .flake8  .gitignore  .gitmodules  01-Introduction.ipynb  02-Analyze-results.ipynb  Development.ipynb  Dockerfile  LICENSE  README.md  eval.py  lmi.py  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  res.csv  setup.py  task1.py  task2.py  task3.py  utils.py
.github/workflows/: ci.yml
data/: 1B-5M_subset.csv  compileinf.csv  res3.csv
experiments/: task1-1B.py  task1-alpha.py  task1-compile.py  task1-gpu.py  task1-inmemory.py  task1-quant.py
figures/: plot.py  res.csv
metacentrum/: run-1B.sh  run-LMI24.sh  run-all.sh  run-alpha.sh  run-experiments.sh  run-gpu.sh
results/: Epochs-accuracy.csv  LMI23-profile.csv  LMI24-profile.csv  alpha-80.csv  compiletrain.csv  quant.csv
search/: __init__.py  lmi.py  search.py  test_insert.py
search/attribtue_filtering/: __init__.py  default_filtering.py
search/li/: Baseline.py  Bucket.py  BuildConfiguration.py  LearnedIndex.py  LearnedIndexBuilder.py  Logger.py  PriorityQueue.py  inverted_file.py  model.py  utils.py
search/li/clustering/: __init__.py  faiss_kmeans.py  scikit_kmeans.py
search/li/filtering/: Bucket.py  InvertedFileIndex.py
search/li/testing/: build_lmi.py  graph_gen.py  graph_gen_proteins.py  test_lmi.py
search/testing/: build_lmi.py  graphs.py  prepare_data.py  test_lmi.py
search/tests/: test_insert.py
toy/: .gitignore  Cargo.toml
toy/src/: main.rs  original.py
